--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,23 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="fleet.html">Cars</a></li>
-                            <li><a href="offers.html">Offers</a></li>
+                            <li><a href="index.html" >Home</a></li>
+                            
+
                             <li class="dropdown">
+                                <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                                    aria-haspopup="true" aria-expanded="false">Our Vehciles</a>
+
+                                <div class="dropdown-menu">
+                                    <a class="dropdown-item" href="./economy.html">Economy Class</a>
+                                    <a class="dropdown-item" href="./standard.html">Standard Class</a>
+                                    <a class="dropdown-item" href="./standard.html">Business Class</a>
+                                    <a class="dropdown-item" href="./standard.html">Premium  Class </a>
+                                   
+                                </div>
+                            </li>
+                            <li><a href="./about.html">About Us</a></li>
+                            <!-- <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button"
                                     aria-haspopup="true" aria-expanded="false">About</a>
 
@@ -63,7 +76,7 @@
                                     <a class="dropdown-item" href="faq.html">FAQ</a>
                                     <a class="dropdown-item" href="terms.html">Terms</a>
                                 </div>
-                            </li>
+                            </li> -->
                             <li><a href="contact.html" class="active">Contact</a></li>
                         </ul>
                         <a class='menu-trigger'>
@@ -116,10 +129,10 @@
 
               <div class="col-md-4">
                   <div class="icon">
-                      <i class="fa fa-envelope"></i>
+                      <i class="fa fa-facebook"></i>
                   </div>
 
-                  <h5><a href="#">baridhararentacar@gmail.com</a></h5>
+                  <h5><a href="https://www.facebook.com/baridhararentacar">Baridhara Rent A Car Facebook Page</a></h5>
 
                   <br>
               </div>
@@ -143,13 +156,13 @@
     <section class="section" id="contact-us" style="margin-top: 0">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-xs-12">
                     <div id="map">
 
                       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.24058435895!2d90.41935571527503!3d23.810042492411462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c7ad53b50747%3A0xabd56fbb76df8b0a!2sBaridhara%20rent%20a%20Car!5e0!3m2!1sen!2sbd!4v1642665070025!5m2!1sen!2sbd" width="100%" height="600px" frameborder="0" style="border:0" allowfullscreen loading="lazy"></iframe>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-xs-12">
+                <!-- <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="contact-form section-bg" style="background-image: url(assets/images/contact-1-720x480.jpg)">
                         <form id="contact" action="" method="post">
                           <div class="row">
@@ -181,7 +194,7 @@
                           </div>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
